--- a/configure.ac
+++ b/configure.ac
@@ -1,11 +1,12 @@
 AC_INIT(stringencoders, [v3.10.3], [nickg -at- client9 -dot- com])
-AC_PREREQ(2.68)
+AC_PREREQ(2.63)
 AM_INIT_AUTOMAKE
 AC_PROG_LIBTOOL
 AC_CONFIG_HEADERS(config.h)
 AC_CONFIG_MACRO_DIR([m4])
 
 AC_PROG_CC
+AM_PROG_CC_C_O
 AC_PROG_CXX
 AC_PROG_INSTALL
 
